salesforce_sfdx/main/default/objects/Opportunity/Opportunity.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>