salesforce_sfdx/main/default/objects/Opportunity/fields/Cerrada_Perdida__c.field-meta.xml
<CustomField>
    <fullName>Cerrada_Perdida__c</fullName>
    <label>Cerrada no ganada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perdida</fullName>
            </value>
            <value>
                <fullName>Desistida</fullName>
            </value>
            <value>
                <fullName>Desierta</fullName>
            </value>
            <value>
                <fullName>No invitado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Cerrada Ganada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>