salesforce_sfdx/main/default/objects/Opportunity/fields/Linea_de_Negocio__c.field-meta.xml
<CustomField>
    <fullName>Linea_de_Negocio__c</fullName>
    <label>Línea de Negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOC (Servicios Operaciones Comerciales)</fullName>
            </value>
            <value>
                <fullName>SOT (Servicios Operaciones Técnicas)</fullName>
            </value>
            <value>
                <fullName>SAT (Servicios Alta Tensión)</fullName>
            </value>
            <value>
                <fullName>CER (Certificación)</fullName>
            </value>
            <value>
                <fullName>UMH (Ultima Milla Hogar)</fullName>
            </value>
            <value>
                <fullName>PEX (Planta Externa)</fullName>
            </value>
            <value>
                <fullName>MSM (Mantención Sitios Móviles)</fullName>
            </value>
            <value>
                <fullName>CON (Construcción)</fullName>
            </value>
            <value>
                <fullName>AUT (Automatización)</fullName>
            </value>
            <value>
                <fullName>Detección de temperatura por cámaras</fullName>
            </value>
            <value>
                <fullName>PPA</fullName>
            </value>
            <value>
                <fullName>Green Corporate PPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>