salesforce_sfdx/main/default/objects/Opportunity/fields/Motivo_de_Perdida__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_Perdida__c</fullName>
    <label>Motivo de perdida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Evaluación Administrativa</fullName>
            </value>
            <value>
                <fullName>Evaluación Técnica</fullName>
            </value>
            <value>
                <fullName>Evaluación Económica</fullName>
            </value>
            <value>
                <fullName>Preferencia</fullName>
            </value>
            <value>
                <fullName>Alcances Administrativos</fullName>
            </value>
            <value>
                <fullName>Alcances Técnicos</fullName>
            </value>
            <value>
                <fullName>Alcances Económicos</fullName>
            </value>
            <value>
                <fullName>Presupuesto</fullName>
            </value>
            <value>
                <fullName>Cambios en la Ingeniería</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>