salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Bolsa_CGE__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Bolsa_CGE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bolsa CGE</label>
    <type>Checkbox</type>
</CustomField>