salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Bolsa_Fast_Track__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Bolsa_Fast_Track__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcar si la oportunidad pasa por la bolsa de riesgo fast track</description>
    <inlineHelpText>Marcar si la oportunidad pasa por la bolsa de riesgo fast track</inlineHelpText>
    <label>Bolsa Fast Track</label>
    <type>Checkbox</type>
</CustomField>