salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_CapEx__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_CapEx__c</fullName>
    <label>CapEx</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>