salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Clasificacion_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Clasificacion_Oportunidad__c</fullName>
    <label>Clasificación Oportunidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Engie</fullName>
            </value>
            <value>
                <fullName>Clasica</fullName>
                <label>Clásica</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>