salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Competidor_adjudicado__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Competidor_adjudicado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competidor adjudicado</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Competidor)</relationshipLabel>
    <relationshipName>Oportunidades_Ganadas</relationshipName>
    <type>Lookup</type>
</CustomField>