salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Consultor__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Consultor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Consultor)</relationshipLabel>
    <relationshipName>Oportunidades4</relationshipName>
    <type>Lookup</type>
</CustomField>