salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Contacto_cliente__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Contacto_cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto cliente</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Oportunidades (Contacto del Cliente)</relationshipLabel>
    <relationshipName>Oportunidades1</relationshipName>
    <type>Lookup</type>
</CustomField>