salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Contacto_consultor__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Contacto_consultor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto consultor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Oportunidades (Contacto consultor)</relationshipLabel>
    <relationshipName>Oportunidades2</relationshipName>
    <type>Lookup</type>
</CustomField>