salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Cuenta_compertidor_1__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Cuenta_compertidor_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta competidor 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Cuenta competidor)</relationshipLabel>
    <relationshipName>Oportunidades1</relationshipName>
    <type>Lookup</type>
</CustomField>