salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Cuenta_compertidor_2__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Cuenta_compertidor_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta competidor 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Cuenta Competidor 2)</relationshipLabel>
    <relationshipName>Oportunidades2</relationshipName>
    <type>Lookup</type>
</CustomField>