salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Cuenta_compertidor_3__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Cuenta_compertidor_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta competidor 3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Cuenta Competidor 3)</relationshipLabel>
    <relationshipName>Oportunidades3</relationshipName>
    <type>Lookup</type>
</CustomField>