salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Driver_del_proyecto__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Driver_del_proyecto__c</fullName>
    <label>Driver del proyecto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PPA Nuevo</fullName>
            </value>
            <value>
                <fullName>Extensión de PPA</fullName>
            </value>
            <value>
                <fullName>Posicionamiento de marca</fullName>
            </value>
            <value>
                <fullName>One-ENGIE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>