salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Estado_del_contrato__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Estado_del_contrato__c</fullName>
    <label>Estado del contrato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En Proceso</fullName>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Firmado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>