salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Fecha_envio_propuesta_a_cliente__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Fecha_envio_propuesta_a_cliente__c</fullName>
    <label>Fecha envío propuesta a cliente</label>
    <type>Date</type>
</CustomField>