salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Fecha_firma_contrato__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Fecha_firma_contrato__c</fullName>
    <inlineHelpText>Fecha estimada</inlineHelpText>
    <label>Fecha firma contrato</label>
    <type>Date</type>
</CustomField>