salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Lider_de_proyecto__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Lider_de_proyecto__c</fullName>
    <label>Líder de Proyecto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Francisco Barros</fullName>
            </value>
            <value>
                <fullName>Vicente Camino</fullName>
            </value>
            <value>
                <fullName>Ivania Novacovic</fullName>
            </value>
            <value>
                <fullName>Andrea Vera</fullName>
            </value>
            <value>
                <fullName>Valentina Vera</fullName>
            </value>
            <value>
                <fullName>Patricio Sanchez</fullName>
            </value>
            <value>
                <fullName>Camila Bolados</fullName>
            </value>
            <value>
                <fullName>Andres Pregallo</fullName>
            </value>
            <value>
                <fullName>Felipe Peña</fullName>
            </value>
            <value>
                <fullName>Alejandra Hernández</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>