salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Margen_esperado__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Margen_esperado__c</fullName>
    <inlineHelpText>Margen esperado (%)</inlineHelpText>
    <label>Margen esperado</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>