salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Motivo_no_adjudicacion__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Motivo_no_adjudicacion__c</fullName>
    <label>Motivo de no adjudicación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Precio</fullName>
            </value>
            <value>
                <fullName>Condiciones contractuales</fullName>
            </value>
            <value>
                <fullName>Falta de presupuesto del cliente</fullName>
            </value>
            <value>
                <fullName>Calidad crediticia cliente</fullName>
            </value>
            <value>
                <fullName>Proceso cancelado</fullName>
            </value>
            <value>
                <fullName>No cumple expectativas del cliente</fullName>
            </value>
            <value>
                <fullName>Incertidumbre regulatoria</fullName>
            </value>
            <value>
                <fullName>Administrativo</fullName>
            </value>
            <value>
                <fullName>Técnico</fullName>
            </value>
            <value>
                <fullName>Económico</fullName>
            </value>
            <value>
                <fullName>Concurso vacío</fullName>
            </value>
            <value>
                <fullName>Ética</fullName>
            </value>
            <value>
                <fullName>Afinidad del Consultor/Cliente por la competencia</fullName>
            </value>
            <value>
                <fullName>Penalidad no paga romper el contrato</fullName>
            </value>
            <value>
                <fullName>Temor a cambiar de suministrador</fullName>
            </value>
            <value>
                <fullName>Pendiente de validación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>