salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Opciones_cierre_no_ganado__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Opciones_cierre_no_ganado__c</fullName>
    <label>Opciones cierre no ganado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Perdida</fullName>
            </value>
            <value>
                <fullName>Desistida</fullName>
            </value>
            <value>
                <fullName>Desierta</fullName>
            </value>
            <value>
                <fullName>No adjudicado</fullName>
            </value>
            <value>
                <fullName>No firmado</fullName>
            </value>
            <value>
                <fullName>Vencido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>