salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Oportunidad_en_Stand_By__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Oportunidad_en_Stand_By__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oportunidad en Stand-By</label>
    <type>Checkbox</type>
</CustomField>