salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Precio_adjudicado__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Precio_adjudicado__c</fullName>
    <label>Precio adjudicado</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>