salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Precio_competidor_1__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Precio_competidor_1__c</fullName>
    <label>Precio competidor 1</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>