salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Prioridad__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Prioridad__c</fullName>
    <label>Prioridad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Must Win</fullName>
            </value>
            <value>
                <fullName>Crítica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>