salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Produccion_anual_estimada_MWh_agno__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Produccion_anual_estimada_MWh_agno__c</fullName>
    <label>Producción anual estimada (MWh/año)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>