salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Proveedor_de_transporte__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Proveedor_de_transporte__c</fullName>
    <label>Proveedor de transporte</label>
    <length>155</length>
    <type>Text</type>
</CustomField>