salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Punto_de_Medicion_1__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Punto_de_Medicion_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Punto de Medición 1</label>
    <referenceTo>OSFCL_Barra_de_transmision__c</referenceTo>
    <relationshipLabel>Oportunidades (Punto de Medición PPA)</relationshipLabel>
    <relationshipName>Oportunidades1</relationshipName>
    <type>Lookup</type>
</CustomField>