salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Punto_de_Medicion_2__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Punto_de_Medicion_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Punto de Medición 2</label>
    <referenceTo>OSFCL_Barra_de_transmision__c</referenceTo>
    <relationshipLabel>Oportunidades (Punto de Medición PPA 2)</relationshipLabel>
    <relationshipName>Oportunidades3</relationshipName>
    <type>Lookup</type>
</CustomField>