salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Tamano_de_PV_kWp__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Tamano_de_PV_kWp__c</fullName>
    <label>Tamaño de PV (kWp)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>