salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Tipo_de_Contrato__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Tipo_de_Contrato__c</fullName>
    <label>Tipo de Contrato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adenda</fullName>
            </value>
            <value>
                <fullName>Renovación</fullName>
            </value>
            <value>
                <fullName>Nuevo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>