salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Tipo_de_oferta__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Tipo_de_oferta__c</fullName>
    <label>Tipo de oferta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No vinculante</fullName>
            </value>
            <value>
                <fullName>Vinculante</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>