salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Tipo_de_PV__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Tipo_de_PV__c</fullName>
    <label>Tipo de PV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rooftop</fullName>
            </value>
            <value>
                <fullName>Ground</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>