salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Tipo_Venta_a_la_Red__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Tipo_Venta_a_la_Red__c</fullName>
    <label>Tipo Venta a la Red</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net Billing</fullName>
            </value>
            <value>
                <fullName>Instalación Compartida / PMGD</fullName>
            </value>
            <value>
                <fullName>100% Autoconsumo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>