salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCL_Volumen_MMBTU__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Volumen_MMBTU__c</fullName>
    <label>Volumen (MMBTU)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>