salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCO_Cliente_final__c.field-meta.xml
<CustomField>
    <fullName>OSFCO_Cliente_final__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente Final</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades5</relationshipName>
    <type>Lookup</type>
</CustomField>