salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCO_Consumo_total_esperado__c.field-meta.xml
<CustomField>
    <fullName>OSFCO_Consumo_total_esperado__c</fullName>
    <formula>(  OSFMX_ExpectedAnnualConsumptionMWhByYear__c  / 12 )  *  OSFMX_DeliveryTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumo total esperado (MWh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>