salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCO_Energia_dedicada_Planta_Engie_1__c.field-meta.xml
<CustomField>
    <fullName>OSFCO_Energia_dedicada_Planta_Engie_1__c</fullName>
    <label>Energía dedicada planta Engie 1</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>