salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCO_Fecha_envio_oferta_vinculante__c.field-meta.xml
<CustomField>
    <fullName>OSFCO_Fecha_envio_oferta_vinculante__c</fullName>
    <label>Fecha envío oferta vinculante</label>
    <type>Date</type>
</CustomField>