salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCO_Mercado_destino__c.field-meta.xml
<CustomField>
    <fullName>OSFCO_Mercado_destino__c</fullName>
    <label>Mercado destino</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regulado</fullName>
            </value>
            <value>
                <fullName>No regulado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>