salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCO_Planta_Engie_2__c.field-meta.xml
<CustomField>
    <fullName>OSFCO_Planta_Engie_2__c</fullName>
    <label>Planta Engie 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Caracoli (124.558 GWh-y)</fullName>
            </value>
            <value>
                <fullName>Cerritos (23.837 GWh-y)</fullName>
            </value>
            <value>
                <fullName>Malambo (122.528 GWh-y)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>