salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCO_Puntos_de_suministro__c.field-meta.xml
<CustomField>
    <fullName>OSFCO_Puntos_de_suministro__c</fullName>
    <label>Puntos de suministro</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>