salesforce_sfdx/main/default/objects/Opportunity/fields/OSFCO_Rol_de_la_cuenta__c.field-meta.xml
<CustomField>
    <fullName>OSFCO_Rol_de_la_cuenta__c</fullName>
    <label>Rol de la Cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente Final</fullName>
            </value>
            <value>
                <fullName>Comercializadora cliente</fullName>
            </value>
            <value>
                <fullName>Comercializadora</fullName>
            </value>
            <value>
                <fullName>Cliente</fullName>
                <isActive>false</isActive>
                <label>Cliente</label>
            </value>
            <value>
                <fullName>Concesionario</fullName>
                <isActive>false</isActive>
                <label>Concesionario</label>
            </value>
            <value>
                <fullName>Construcción a Terceros</fullName>
                <isActive>false</isActive>
                <label>Construcción a Terceros</label>
            </value>
            <value>
                <fullName>Intermediario</fullName>
                <isActive>false</isActive>
                <label>Intermediario</label>
            </value>
            <value>
                <fullName>Vendor</fullName>
                <isActive>false</isActive>
                <label>Vendor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>