salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_AmountEUR__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_AmountEUR__c</fullName>
    <formula>Amount  * 0.041</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto EUR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>