salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_AwardDate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_AwardDate__c</fullName>
    <label>Fecha de adjudicación</label>
    <type>Date</type>
</CustomField>