salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_BindingOffersDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_BindingOffersDeliveryDate__c</fullName>
    <label>Fecha de envío de oferta</label>
    <type>Date</type>
</CustomField>