salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_BusinessModel__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_BusinessModel__c</fullName>
    <inlineHelpText>Asset Based = Cuando la solución al cliente requiere financiamiento (tipo PPA o BOOT) / Asset Light = Cuando la solución es un único pago (tipo EPC)</inlineHelpText>
    <label>Modelo de negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset Light</fullName>
            </value>
            <value>
                <fullName>Asset Based</fullName>
            </value>
            <value>
                <fullName>M&amp;A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>