salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_ClosedComments__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ClosedComments__c</fullName>
    <label>Comentarios de cierre perdido</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>